--- a/Level1/Unit1/teacher/Missing Letter/index.html
+++ b/Level1/Unit1/teacher/Missing Letter/index.html
@@ -6,16 +6,19 @@
     <title>Hannah Missing Letter</title>
     <style>
         body {
-            font-family: 'Times New Roman', Times, serif;
-            background-color: #ffebcd;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
+    font-family: 'Times New Roman', Times, serif;
+    background-image: url('../../../../imagens/fundo.png');
+    background-repeat: repeat;
+    background-size: auto;
+    background-color: #ffebcd; /* Cor de segurança caso a imagem não carregue */
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
 
         h1 {
             text-align: center;
