--- a/Level1/Unit1/teacher/Mixed Letters/index.html
+++ b/Level1/Unit1/teacher/Mixed Letters/index.html
@@ -6,15 +6,18 @@
     <title>Hannah Mixed Letters</title>
     <style>
         /* Aplicação de Times New Roman e centralização dos elementos */
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            background-color: #ffebcd;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Centraliza o conteúdo horizontalmente */
-        }
+       body {
+    font-family: 'Times New Roman', Times, serif;
+    background-image: url('../../../../imagens/fundo.png');
+    background-repeat: repeat;
+    background-size: auto;
+    background-color: #ffebcd; /* Cor de segurança caso a imagem não carregue */
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centraliza o conteúdo horizontalmente */
+}
 
         h1 {
             text-align: center;
