--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -180,16 +180,16 @@
         window.onload = loadText;
 
         // Nova função para navegação de volta com base no URL atual
-    function goBackToLevel() {
-        // Obtém o URL atual
-        const currentUrl = window.location.href;
+   function goBackToLevel() {
+    // Obtém o URL atual
+    const currentUrl = window.location.href;
 
-        // Remove os dois últimos segmentos do URL ('teacher' e 'index.html')
-        const newUrl = currentUrl.split('/').slice(0, -2).join('/');
+    // Remove os dois últimos segmentos do URL ('teacher' e 'index.html')
+    const newUrl = currentUrl.split('/').slice(0, -2).join('/');
 
-        // Redireciona para o novo URL
-        window.location.href = newUrl;
-    }
+    // Redireciona para o novo URL substituindo o histórico atual
+    window.location.replace(newUrl);
+}
     </script>
 </body>
 </html>
