--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -183,8 +183,9 @@
     const currentUrl = window.location.href;
     const newUrl = currentUrl.split('/').slice(0, -2).join('/');
 
-    // Redireciona para o novo URL
-    window.location.href = newUrl;
+    // Redireciona para o novo URL substituindo o histórico atual
+    window.location.replace(newUrl);
+}
 
     // Recarrega a página após um breve atraso para garantir o carregamento correto
     setTimeout(() => {
