--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -178,20 +178,19 @@
     // Chama a função para carregar o texto assim que a página é carregada
     window.onload = loadText;
 
-    // Nova função para navegação de volta com base no URL atual
-   function goBackToLevel() {
-    const currentUrl = window.location.href;
-    const newUrl = currentUrl.split('/').slice(0, -2).join('/');
+  // Nova função para navegação de volta com base no URL atual
+        function goBackToLevel() {
+            const currentUrl = window.location.href;
+            const newUrl = currentUrl.split('/').slice(0, -2).join('/');
 
-    // Redireciona para o novo URL substituindo o histórico atual
-    window.location.replace(newUrl);
-}
+            // Redireciona para o novo URL
+            window.location.href = newUrl;
 
-    // Recarrega a página após um breve atraso para garantir o carregamento correto
-    setTimeout(() => {
-        window.location.reload(true);
-    }, 100);
-}
+            // Recarrega a página após um breve atraso para garantir o carregamento correto
+            setTimeout(() => {
+                window.location.reload(true);
+            }, 100);
+        }
 </script>
 </body>
 </html>
