--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -178,19 +178,21 @@
     // Chama a função para carregar o texto assim que a página é carregada
     window.onload = loadText;
 
-  // Nova função para navegação de volta com base no URL atual
-        function goBackToLevel() {
-            const currentUrl = window.location.href;
-            const newUrl = currentUrl.split('/').slice(0, -2).join('/');
+    // Função para navegação de volta com base no URL atual
+    function goBackToLevel() {
+        const currentUrl = window.location.href;
 
-            // Redireciona para o novo URL
-            window.location.href = newUrl;
+        // Remove os segmentos "/teacher/index.html" do final do URL
+        const newUrl = currentUrl.replace("/teacher/index.html", "");
 
-            // Recarrega a página após um breve atraso para garantir o carregamento correto
-            setTimeout(() => {
-                window.location.reload(true);
-            }, 100);
-        }
+        // Redireciona para o novo URL
+        window.location.href = newUrl;
+
+        // Recarrega a página após um breve atraso para garantir o carregamento correto
+        setTimeout(() => {
+            window.location.reload(true);
+        }, 100);
+    }
 </script>
 </body>
 </html>
