--- a/Level1/Unit1/teacher/index.html
+++ b/Level1/Unit1/teacher/index.html
@@ -162,7 +162,7 @@
     </div>
 
     <!-- JavaScript para carregar o texto -->
-   <script>
+  <script>
     // Função para carregar o conteúdo do arquivo texto.txt
     function loadText() {
         fetch('texto.txt')
@@ -182,16 +182,11 @@
     function goBackToLevel() {
         const currentUrl = window.location.href;
 
-        // Remove os segmentos "/teacher/index.html" do final do URL
-        const newUrl = currentUrl.replace("/teacher/index.html", "");
+        // Remove os segmentos "/teacher/index.html" e redireciona para "/index.html" da unidade
+        const newUrl = currentUrl.replace("/teacher/index.html", "/index.html");
 
         // Redireciona para o novo URL
         window.location.href = newUrl;
-
-        // Recarrega a página após um breve atraso para garantir o carregamento correto
-        setTimeout(() => {
-            window.location.reload(true);
-        }, 100);
     }
 </script>
 </body>
