--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -309,77 +309,101 @@
         }
     }
 
-    function createActivity(imageUrl, word) {
-        const activityContainer = document.getElementById('activity-container');
-        const activityDiv = document.createElement('div');
-        activityDiv.classList.add('activity');
+function createActivity(imageUrl, word) {
+    const activityContainer = document.getElementById('activity-container');
+    const activityDiv = document.createElement('div');
+    activityDiv.classList.add('activity');
 
-        const imgElement = document.createElement('img');
-        imgElement.src = imageUrl;
-        imgElement.onerror = function() {
-            console.error(`Erro ao carregar a imagem: ${imageUrl}`);
-        };
-        activityDiv.appendChild(imgElement);
+    // Elemento da imagem
+    const imgElement = document.createElement('img');
+    imgElement.src = imageUrl;
+    imgElement.onerror = function() {
+        console.error(`Erro ao carregar a imagem: ${imageUrl}`);
+    };
+    activityDiv.appendChild(imgElement);
 
-        const wordContainer = document.createElement('div');
-        wordContainer.classList.add('word-container');
+    // Botão de som (ícone de alto-falante)
+    const soundButton = document.createElement('button');
+    soundButton.innerHTML = '🔊'; // Ícone de som (ou use uma imagem para o ícone, se preferir)
+    soundButton.style.fontSize = '24px';
+    soundButton.style.border = 'none';
+    soundButton.style.background = 'transparent';
+    soundButton.style.cursor = 'pointer';
+    soundButton.style.marginLeft = '10px';
 
-        const missingWordElement = document.createElement('div');
-        missingWordElement.classList.add('missing-word');
+    // Adiciona evento de clique ao botão de som
+    soundButton.addEventListener('click', function() {
+        playSound(word);
+    });
+    
+    activityDiv.appendChild(soundButton); // Adiciona o botão ao lado da imagem
 
-        const letterInputs = [];
-        word.split('').forEach((letter, index) => {
-            const letterInput = document.createElement('input');
-            letterInput.classList.add('missing-letter-input');
-            letterInput.maxLength = 1;
+    const wordContainer = document.createElement('div');
+    wordContainer.classList.add('word-container');
 
-            letterInput.addEventListener('input', function() {
-                if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
-                    letterInput.classList.add('correct');
-                    letterInput.classList.remove('incorrect');
+    const missingWordElement = document.createElement('div');
+    missingWordElement.classList.add('missing-word');
 
-                    if (index < word.length - 1) {
-                        letterInputs[index + 1].focus(); 
-                    }
+    const letterInputs = [];
+    word.split('').forEach((letter, index) => {
+        const letterInput = document.createElement('input');
+        letterInput.classList.add('missing-letter-input');
+        letterInput.maxLength = 1;
 
-                    const animationElement = document.createElement('div');
-                    animationElement.classList.add('letter-animation');
-                    animationElement.innerText = letter.toUpperCase();
-                    activityDiv.appendChild(animationElement);
-                    animationElement.style.display = 'block';
+        letterInput.addEventListener('input', function() {
+            if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
+                letterInput.classList.add('correct');
+                letterInput.classList.remove('incorrect');
 
-                    setTimeout(() => {
-                        animationElement.style.display = 'none';
-                        animationElement.remove();
-                    }, 1000);
+                if (index < word.length - 1) {
+                    letterInputs[index + 1].focus(); 
+                }
 
-                    const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
-                    if (userWord === word.toUpperCase()) {
-                        speakText(word);
-                        completedWords++;
+                const animationElement = document.createElement('div');
+                animationElement.classList.add('letter-animation');
+                animationElement.innerText = letter.toUpperCase();
+                activityDiv.appendChild(animationElement);
+                animationElement.style.display = 'block';
 
-                        if (completedWords === activities.length) {
-                            showCompletionModal();
-                        }
-                    } else {
-                        speakText(letter);
+                setTimeout(() => {
+                    animationElement.style.display = 'none';
+                    animationElement.remove();
+                }, 1000);
+
+                const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
+                if (userWord === word.toUpperCase()) {
+                    speakText(word);
+                    completedWords++;
+
+                    if (completedWords === activities.length) {
+                        showCompletionModal();
                     }
                 } else {
-                    letterInput.classList.add('incorrect');
-                    letterInput.classList.remove('correct');
+                    speakText(letter);
                 }
-            });
-
-            letterInputs.push(letterInput);
-            missingWordElement.appendChild(letterInput);
+            } else {
+                letterInput.classList.add('incorrect');
+                letterInput.classList.remove('correct');
+            }
         });
 
-        wordContainer.appendChild(missingWordElement);
-        activityDiv.appendChild(wordContainer);
-        activityContainer.appendChild(activityDiv);
-        activities.push(word);
-    }
+        letterInputs.push(letterInput);
+        missingWordElement.appendChild(letterInput);
+    });
 
+    wordContainer.appendChild(missingWordElement);
+    activityDiv.appendChild(wordContainer);
+    activityContainer.appendChild(activityDiv);
+    activities.push(word);
+}
+
+function playSound(word) {
+    const synth = window.speechSynthesis;
+    const utterance = new SpeechSynthesisUtterance(word);
+    utterance.lang = 'en-US'; // Inglês americano
+    synth.speak(utterance);
+}
+ 
     function showCompletionModal() {
     calculateGrade(); // Calcula e exibe a nota ao concluir
 }
