--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -262,29 +262,23 @@
     let activities = [];
     let completedWords = 0; // Contador de palavras concluídas
 
-    function speakText(text) {
+   // Função para ler a palavra em voz alta
+function speakText(text) {
+    if ('speechSynthesis' in window) {
         const synth = window.speechSynthesis;
         const utterThis = new SpeechSynthesisUtterance(text);
         utterThis.lang = 'en-US';
+        synth.cancel(); // Cancela qualquer fala anterior antes de iniciar a nova
         synth.speak(utterThis);
+    } else {
+        console.error("Speech synthesis não é suportado neste navegador.");
     }
+}
 
-    async function loadActivities() {
-        try {
-            const response = await fetch('../data1/words.txt');
-            const text = await response.text();
-            const words = text.trim().split('\n');
-
-            words.forEach((word, index) => {
-                const imageName = `imagem${index + 1}.jpeg`;
-                const imageUrl = `../data1/imagens/${imageName}`;
-                
-                createActivity(imageUrl, word);
-            });
-        } catch (error) {
-            console.error('Erro ao carregar palavras:', error);
-        }
-    }
+// Função para reproduzir o som da palavra ao clicar no botão
+function playSound(word) {
+    speakText(word); // Chama a função de leitura com a palavra
+}
 
 function createActivity(imageUrl, word) {
     const activityContainer = document.getElementById('activity-container');
