--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -369,13 +369,13 @@ function saveGradeToDatabase(grade) {
             const { level, unit } = getLevelAndUnitFromURL();
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-            dbRef.child('nota').once('value').then((snapshot) => {
+            dbRef.child('nota2').once('value').then((snapshot) => {
                 const existingGrade = snapshot.val();
                 isStudentLinkedToProfessor(userId).then(isLinked => {
                     if (!isLinked || !existingGrade || existingGrade === 0) {
-                        dbRef.update({ nota: grade })
+                        dbRef.update({ nota2: grade })
                             .then(() => console.log("Nota salva com sucesso."))
-                            .catch(error => console.error("Erro ao salvar a nota:", error));
+                            .catch(error => console.error("Erro ao salvar a nota2:", error));
                     } else {
                         console.log("Nota já registrada. Somente o professor pode modificar.");
                     }
