--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -322,6 +322,25 @@ function createActivity(imageUrl, word) {
     activityDiv.appendChild(wordContainer);
     activityContainer.appendChild(activityDiv);
 }
+
+// Função para carregar atividades a partir do arquivo words.txt
+async function loadActivities() {
+    try {
+        const response = await fetch('../data1/words.txt');
+        const text = await response.text();
+        const words = text.trim().split('\n');
+
+        words.forEach((word, index) => {
+            const imageName = `imagem${index + 1}.jpeg`;
+            const imageUrl = `../data1/imagens/${imageName}`;
+            createActivity(imageUrl, word);
+        });
+
+        activities = words; // Preenche `activities` com as palavras carregadas
+    } catch (error) {
+        console.error('Erro ao carregar palavras:', error);
+    }
+}
  
     function showCompletionModal() {
     document.getElementById('overlay').style.display = 'block';
@@ -431,17 +450,20 @@ function checkCompletion() {
     wordInputs.forEach(input => {
         if (input.value.trim() === "") {
             allFilled = false;
+        } else {
+            completedWords++; // Incrementa `completedWords` quando o campo é preenchido
         }
     });
 
     if (allFilled) {
+        calculateGrade(); // Chama `calculateGrade` para exibir a nota
         showCompletionModal();
     } else {
         alert("Please fill in all the fields before finishing the test.");
     }
- }
-
-    document.addEventListener('DOMContentLoaded', loadActivities);
+}
+   
+document.addEventListener('DOMContentLoaded', loadActivities);
 </script>
 
 </body>
