--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -445,21 +445,25 @@ function isStudentLinkedToProfessor(userId) {
 
 function checkCompletion() {
     const wordInputs = document.querySelectorAll('.word-input');
-    let allFilled = true;
+    completedWords = 0; // Reinicia o contador de respostas corretas antes de verificar
+    let allFilled = true; // Marca se todos os campos estão preenchidos
 
-    wordInputs.forEach(input => {
-        if (input.value.trim() === "") {
-            allFilled = false;
-        } else {
-            completedWords++; // Incrementa `completedWords` quando o campo é preenchido
+    wordInputs.forEach((input, index) => {
+        const userAnswer = input.value.trim().toLowerCase(); // Resposta do usuário em minúsculas
+        const correctAnswer = activities[index].toLowerCase(); // Resposta correta correspondente em minúsculas
+
+        if (userAnswer === "") {
+            allFilled = false; // Marca que ainda há campos vazios
+        } else if (userAnswer === correctAnswer) {
+            completedWords++; // Incrementa o contador apenas para respostas corretas
         }
     });
 
     if (allFilled) {
-        calculateGrade(); // Chama `calculateGrade` para exibir a nota
-        showCompletionModal();
+        calculateGrade(); // Calcula a nota com base nas respostas corretas
+        showCompletionModal(); // Exibe o modal de conclusão
     } else {
-        alert("Please fill in all the fields before finishing the test.");
+        alert("Please fill in all the fields before finishing the test."); // Alerta se algum campo está vazio
     }
 }
    
