--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -352,6 +352,7 @@ function calculateGrade() {
     const completedWords = document.querySelectorAll('.word-input.correct').length;
     const grade = Math.round((completedWords / totalActivities) * 100);
 
+    // Exibe a nota e mensagem abaixo do título
     displayGrade(grade);
 
     if (grade >= 70) {
@@ -401,25 +402,18 @@ function saveGradeToDatabase(grade) {
 }
 
 function displayGrade(grade) {
-    // Atualiza o modal de conclusão
-    const modalContent = document.getElementById('completion-modal');
-    modalContent.innerHTML = `
-        <h2>Phase Completed!</h2>
-        <p>Your score: ${grade}%</p>
-        <button onclick="closeModal()">Close</button>
-    `;
-
-    // Exibe a nota abaixo do título
+    // Elemento de exibição da nota
     const gradeDisplay = document.getElementById('grade-display');
-    gradeDisplay.style.display = 'block'; // Mostra o elemento
-    gradeDisplay.innerHTML = `Your Grade: ${grade}%`;
+    gradeDisplay.style.display = 'block';
 
-    // Define a cor da nota (verde para >= 70%, vermelho para < 70%)
+    // Define a cor e a mensagem com base na nota
     if (grade >= 70) {
-        gradeDisplay.style.color = '#4CAF50'; // Verde
+        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Congratulations on passing!`;
+        gradeDisplay.style.color = '#4CAF50'; // Verde para nota suficiente
     } else {
-        gradeDisplay.style.color = '#FF0000'; // Vermelho
-    }
+        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Please retake the test to score at least 70%.`;
+        gradeDisplay.style.color = '#FF0000'; // Vermelho para nota insuficiente
+}
 
     // Exibe o modal de conclusão
     document.getElementById('overlay').style.display = 'block';
