--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -401,6 +401,30 @@ function saveGradeToDatabase(grade) {
     });
 }
 
+// Função para buscar a nota ao carregar a página
+function loadExistingGrade() {
+    firebase.auth().onAuthStateChanged((user) => {
+        if (user) {
+            const userId = user.uid;
+            const { level, unit } = getLevelAndUnitFromURL();
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/nota2`);
+
+            dbRef.once('value').then((snapshot) => {
+                const existingGrade = snapshot.val();
+                if (existingGrade !== null) {
+                    displayGrade(existingGrade); // Exibe a nota carregada do banco de dados
+                } else {
+                    console.log("Nenhuma nota encontrada.");
+                }
+            }).catch((error) => {
+                console.error("Erro ao buscar a nota:", error);
+            });
+        } else {
+            console.error("Usuário não autenticado.");
+        }
+    });
+}
+
 function displayGrade(grade) {
     // Elemento de exibição da nota
     const gradeDisplay = document.getElementById('grade-display');
@@ -476,7 +500,10 @@ function checkCompletion() {
     }
 }
    
-document.addEventListener('DOMContentLoaded', loadActivities);
+document.addEventListener('DOMContentLoaded', () => {
+    loadActivities();
+    loadExistingGrade(); // Adiciona esta linha para carregar a nota ao iniciar
+});
 </script>
 
 </body>
