--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -380,26 +380,23 @@ function calculateGrade() {
     // Define a mensagem de conclusão com base na nota
     let message = "";
     if (grade >= 70) {
-        message = "Congratulations! You have completed this phase.";
+        message = "Congratulations! You have completed this test.";
+        showCompletionModal(message); // Exibe o modal com a mensagem de conclusão
     } else {
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
                 const userId = user.uid;
                 isStudentLinkedToProfessor(userId).then(isLinked => {
                     if (isLinked) {
-                        message = "Nota insuficiente. Entre em contato com seu professor para alterar sua nota.";
+                        message = "Insufficient score. Please contact your teacher to adjust your score.";
                     } else {
-                        message = "Nota insuficiente. Por favor, refaça o teste para obter uma nota mínima de 70%.";
+                        message = "Insufficient score. Please retake the test to achieve a minimum score of 70%.";
                     }
-                    showCompletionModal(message); // Exibe o modal com a mensagem adequada
+                    showCompletionModal(message); // Exibe o modal com a mensagem apropriada
                 });
             }
         });
-        return; // Sai da função para evitar o modal de conclusão sem mensagem
     }
-
-    // Exibe o modal de conclusão com a mensagem
-    showCompletionModal(message);
 }
 
 function saveGradeToDatabase(grade) {
@@ -501,12 +498,15 @@ function checkCompletion() {
 
     wordInputs.forEach((input, index) => {
         const userAnswer = input.value.trim().toLowerCase(); 
-        const correctAnswer = activities[index].toLowerCase();
+        const correctAnswer = activities[index].trim().toLowerCase(); // Garante que a resposta correta ignore maiúsculas e minúsculas
 
         if (userAnswer === "") {
             allFilled = false; 
         } else if (userAnswer === correctAnswer) {
             completedWords++; 
+            input.classList.add('correct'); // Adiciona uma classe para palavras corretas
+        } else {
+            input.classList.remove('correct');
         }
     });
 
