--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -165,8 +165,8 @@
 <!-- Modal de conclusão -->
 <div id="overlay"></div>
 <div id="completion-modal">
-    <h2>Phase Completed!</h2>
-    <p>Congratulations! You have completed this phase.</p>
+    <h2>Test Completed!</h2>
+    <p>Congratulations! You have completed this test.</p>
     <button onclick="closeModal()">Close</button>
 </div>
 
@@ -449,7 +449,7 @@ function displayGrade(grade) {
         gradeDisplay.innerHTML = `Your Grade: ${grade}% - Congratulations on passing!`;
         gradeDisplay.style.color = '#4CAF50';
     } else {
-        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Nota insuficiente. Refaça o teste para obter ao menos 70%.`;
+        gradeDisplay.innerHTML = `Your Grade: ${grade}% - Insufficient score. Please retake the test to achieve a minimum score of 70%.`;
         gradeDisplay.style.color = '#FF0000';
     }
 }
